# quartz

./: .gitignore  Cargo.toml  Makefile  build.wasm  build_compiler_source.sh  build_gen1.sh  compiler.qz  dump.sh  hello.wat  justfile  lexer.qz  out  output  parser.qz  quartz.wasm  quartzcli  std.qz
.github/workflows/: release.yml  rust.yml  test.yml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
fuzz/in/: program1  program2  program3
memorydump/: go.mod  main.go  memorydump_test.go
proptest-regressions/: value.txt
quartz/: ast.qz  compiler.qz  core.qz  empty.qz  errors.qz  formatter.qz  generator.qz  ir.qz  ir_code_gen.qz  json.qz  lexer.qz  location.qz  main.qz  parser.qz  path.qz  preprocessor.qz  std.qz  typecheck.qz  value.qz
quartz-core/: Cargo.toml
quartz-core/src/: ast.rs  builtin.rs  code_generation.rs  compiler.rs  ir.rs  ir_code_generation.rs  lexer.rs  lib.rs  parser.rs  stdlib.rs  typechecker.rs  vm.rs  vm_code_generation.rs  vm_optimizer.rs
quartz-runtime-rs/: Cargo.toml
quartz-runtime-rs/src/: freelist.rs  main.rs  runtime.rs
quartz-vscode/: CHANGELOG.md  LICENSE  README.md  package.json  tsconfig.json  vsc-extension-quickstart.md
quartz-vscode/qasmv/syntaxes/: qasmv.tmLanguage.json
quartz-vscode/qir/: language-configuration.json
quartz-vscode/qir/syntaxes/: quartzir.tmLanguage.json
quartz-vscode/server/: package.json
quartz-vscode/server/src/: server.ts
quartz-vscode/src/: extension.ts
quartz-vscode/syntaxes/: quartz.tmLanguage.json
quartz/ir_path/: escaping.qz  let_call.qz
src/: ast.rs  code_gen.rs  compiler.rs  eval.rs  formatter.rs  generator.rs  ir.rs  ir_code_gen.rs  lexer.rs  lib.rs  main.rs  parser.rs  runtime.rs  stdlib.rs  typecheck.rs  typechecker.rs  util.rs  value.rs  vm.rs
src/util/: ident.rs  path.rs  serial_id_map.rs  sexpr_writer.rs  source.rs
tests/: compile_run.rs
tests/cases/: issue_58.qz  test1.qz  test10.qz  test11.qz  test12.qz  test13.qz  test14.qz  test15.qz  test16.qz  test17.qz  test18.qz  test19.qz  test2.qz  test20.qz  test21.qz  test22.qz  test23.qz  test24.qz  test25.qz  test26.qz  test27.qz  test28.qz  test29.qz  test29.stdout  test3.qz  test30.qz  test4.qz  test5.qz  test6.qz  test7.qz  test8.qz  test9.qz
tests/cases/closures/: test1.qz  test10.qz  test10.stdout  test11.qz  test11.stdout  test2.qz  test3.qz  test4.qz  test5.qz  test6.qz  test7.qz  test7.stdout  test8.qz  test8.stdout  test9.qz  test9.stdout
tests/cases/errors_parser/: test1.qz  test1.stderr  test1.stdout  test2.qz  test2.stderr  test3.qz
tests/cases/errors_typecheck/: test1.qz  test1.stderr  test2.qz  test2.stderr  test3.qz  test3.stderr
tests/cases/fixture/: issue138.qz  issue138.stdout
tests/lsp_check/: test1.qz  test1.stdout
tests/lsp_completion/: test1.arg  test1.qz  test1.stdout  test_broken1.arg
(+12 files in other folders)
