[package]
name = "quartz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
once_cell = "1.16.0"
pretty_assertions = "1.3.0"
regex = "1.7.0"
thiserror = "1.0.37"
wasmer = "3.0.2"
wat = "1.0.52"
