[package]
name = "quartz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
pretty_assertions = "1.3.0"
regex = "1.7.0"
wasmer = "4.0.0"
wasmer-wasix = "0.9.0"
wat = "1.0.52"

[dev-dependencies]
proptest = "1.1.0"
proptest-derive = "0.3.0"

[lib]
name = "quartz"
path = "src/lib.rs"

[[bin]]
name = "quartz"
path = "src/main.rs"
