[package]
name = "quartz-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
log = "0.4.17"
once_cell = "1.10.0"
pretty_assertions = "1.2.1"
regex = "1.5.5"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.30"
