[package]
name = "quartz-runtime-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
log = "0.4.17"
pretty_assertions = "1.2.1"
"quartz-core" = { path = "../quartz-core" }
simplelog = "^0.12.0"
