[package]
name = "quartz-runtime-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.2.8", features = ["derive"] }
log = "0.4.17"
pretty_assertions = "1.2.1"
"quartz-core" = { path = "../quartz-core" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
simplelog = "^0.12.0"
